--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ markdown: kramdown
 plugins:
   - jekyll-feed
 
-destination: _site/iodc18
+destination: _site/
 source: ./source
 
 # Exclude from processing.
