Change baseurl to static to to work with the assests

--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: IODC18
-email: 
+email:
 description: >- # this means to ignore newlines until "baseurl:"
-  
-baseurl: "/iodc18" # the subpath of your site, e.g. /blog
+
+baseurl: "/static" # the subpath of your site, e.g. /blog
 url: "https://ccmdesign.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: 
-github_username:  
+twitter_username:
+github_username:
 
 # Build settings
 markdown: kramdown
