--- a/source/_data/committee.yaml
+++ b/source/_data/committee.yaml
@@ -1,104 +1,106 @@
-- name: Natalia Carfi 
-  org:  Open Government Director, Argentina
-- name: Fabrizio Scrollini 
-  org:  ILDA
+- name: Lucia Abelenda
+  org: Avina
+- name: Aditya Agrawal
+  org: Global Partnership for Sustainable Development Data
+- name: Abhinav Bahl
+  org: Open Government Partnership (OGP)
+- name: Jaimie Boyd
+  org: Government of Canada
+- name: Agnieszka Rawa
+  org: Millennium Challenge Corporation
+- name: Paulina Bustos
+  org: Civica Digital
+- name: Ania Calderone
+  org: Open Data Charter
+- name: Michael Canares
+  org: Open Data Lab Jakarta
+- name: Natalia Carfi
+  org: Government of Argentina
+- name: Stephanie Carroll Rainie
+  org: University of Arizona
+- name: Katie Clancy
+  org: IDRC/OD4D
+- name: Tim Davies
+  org: Open Data Services
+- name: David Eaves
+  org: Harvard Kennedy School
+- name: Felipe Estefan
+  org: Omidyar
+- name: Silvana Fumega
+  org: ILDA
+- name: Joel Gurin
+  org: Centre for Open Data Enterprise (CODE)
+- name: Gabriela Hadid
+  org: Omidyar
+- name: Craig Hammer
+  org: World Bank
+- name: Jeanne Holm
+  org: City of Los Angeles
+- name: Alex Howard
+  org: Sunlight Foundation
+- name: Michael Jarvis
+  org: Transparency and Accountability Initiative (TAI)
+- name: Danny Lammerhirt
+  org: Open Knowledge International (OKI)
+- name: Jean-Noé Landry
+  org: Open North
+- name: Andre Laperriere
+  org: Global Open Data for Agriculture and Nutrition (GODAN)
+- name: Salvador Luis Soriano
+  org: Government of Spain
 - name: Emma Martinho-Truswell
   org: Oxford Insights
-- name: Agnieszka Rawa 
-  org:  MCC 
-- name: Silvana Fumega 
+- name: Christina Morales
+  org: Government of Spain
+- name: Arturo Muente Kunigami
+  org: Inter American Development Bank
+- name: Georg Neumann
+  org: Open Contracting
+- name: Beth Noveck
+  org: Govlab
+- name: Muchiri Nyaggah
+  org: Africa Open Data Network (AODN)
+- name: Anders Pedersen
+  org: Natural Resource Governance Institute
+- name: Chimeng Peng
+  org: Government of Taiwan
+- name: Fernando Perini
+  org: IDRC
+- name: Katelyn Rogers
+  org: Open Knowledge International (OKI)
+- name: Maurice McNaughton
+  org: Caribbean Open Institute/UWI (COI)
+- name: Mark Cardwell
+  org: USAID
+- name: Mor Rubinstein
+  org: Open Heroines / 360Giving
+- name: Ana Sofia  Ruiz Schmidt
+  org: Open Contracting - Hivos
+- name: Lejla Sadiku
+  org: United Nations Development Programme (UNDP)
+- name: Nancy Salem
+  org: Access to Knowledge for Development (A2K4D
+- name: Fabrizio Scrollini
   org: ILDA
-- name: Maurice McNaughton 
-  org:  Caribbean Open Institute/UWI (COI)
-- name: Felipe Estefan 
-  org:  Omidyar
-- name: Gabriela Hadid
-  org:  Omidyar
-- name: Arturo Muente Kunigami 
-  org:  IADB 
-- name: Ana Sofia Ruiz Schmidt 
-  org: Regional Programme Manager - Open Contracting, Hivos
-- name: Ania Calderone 
-  org:  Open Data Charter
-- name: Mark Cardwell 
-  org:  USAID 
-- name: Aditya Agrawal
-  org:  GPSDD
-- name: Fernando Perini 
-  org:  IDRC
-- name: Abhinav Bahl 
-  org:  OGP
-- name: Nnenna Nwakanma 
-  org:  Web Foundation
-- name: Nancy Salem 
-  org:  Access to Knowledge for Development (A2K4D
-- name: Muchiri Nyaggah 
-  org:  Africa Open Data Network (AODN)
-- name: Tim Davies 
-  org:  Open Data Services
-- name: David Eaves 
-  org:  Harvard Kennedy School
-- name: Jaimie Boyd 
-  org:  Government of Canada
-- name: Philip Thigo  
-  org:  Gov of Kenya
-- name: Jeanne Holm 
-  org:  Open Gov Advisor, City of Los Angeles
-- name: Beth Noveck 
-  org:  Govlab
-- name: Christina Morales 
-  org:  datos.gob.es
-- name: Salvador Luis Soriano
-  org:  datos.gob.es
-- name: Stephanie Carroll Rainie 
-  org:  University of Arizona
-- name: Mor Rubinstein 
-  org:  Open Heroines
-- name: Alex Howard 
-  org:  Sunlight Foundation
-- name: Danny Lammerhirt 
-  org:  Open Knowledge
-- name: Stephen Walker 
-  org:  OD4D
-- name: John Wonderlich 
-  org:  Sunlight Foundation
-- name: Chimeng Peng 
-  org:  Government of Taiwan
-- name: Katherine Townsend 
-  org:  Open Government Expert -  AODC
-- name: Jean-Noé Landry 
-  org:  Open North
-- name: Anders Pedersen 
-  org:  Natural Resource Governance Institute
-- name: Joel Gurin 
-  org:  Centre for Open Data Enterprise (CODE)
-- name: Sumandro Chattapadhyay 
-  org:  Center for Internet and Society (CIS)
-- name: Stefaan Verhulst 
-  org:  GovLab
-- name: Fiona Smith 
-  org:  Open Data Institute (ODI)
-- name: Katelyn Rogers 
-  org:  Open Knowledge International (OKI)
-- name: Michael Canares 
-  org:  Open Data Lab Jakarta
-- name: Shaida Badiee 
-  org:  Open Data Watch (ODW)
-- name: Lejla Sadiku 
-  org:  United Nations Development Programme (UNDP)
-- name: Craig Hammer 
-  org:  World Bank
-- name: Khairil Yusof 
-  org:  Sinar Project Malaysia 
-- name: Barbara Ubaldi 
-  org:  OECD
-- name: Georg Neumann 
-  org:  Open Contracting
-- name: Andre Laperriere 
-  org:  GODAN
-- name: Michael Jarvis 
-  org:  TAI
-- name: Katie Clancy 
-  org:  IDRC/OD4D
-- name: Paulina Bustos 
-  org:  Civica
+- name: Fiona Smith
+  org: Open Data Institute (ODI)
+- name: Nnenna Nwakanma
+  org: Web Foundation
+- name: Philip Thigo
+  org: Government of Kenya
+- name: Katherine Townsend
+  org: Africa Open Data Conference
+- name: Barbara Ubaldi
+  org: OECD
+- name: Shaida Badiee
+  org: Open Data Watch (ODW)
+- name: Stefaan Verhulst
+  org: GovLab
+- name: Stephen Walker
+  org: OD4D
+- name: John Wonderlich
+  org: Sunlight Foundation
+- name: Khairil Yusof
+  org: Sinar Project Malaysia
+- name: Sumandro Chattapadhyay
+  org: Center for Internet and Society (CIS)
