--- a/source/_data/committee.yaml
+++ b/source/_data/committee.yaml
@@ -10,7 +10,7 @@
   org: Millennium Challenge Corporation
 - name: Paulina Bustos
   org: Civica Digital
-- name: Ania Calderone
+- name: Ania Calderon
   org: Open Data Charter
 - name: Michael Canares
   org: Open Data Lab Jakarta
@@ -104,3 +104,7 @@
   org: Sinar Project Malaysia
 - name: Sumandro Chattapadhyay
   org: Center for Internet and Society (CIS)
+- name: Abdoul Malick Tapsoba
+  org: Government of Burkina Faso
+- name: Mike Mora 
+  org: Organization of American States
