--- a/source/_data/committee.yaml
+++ b/source/_data/committee.yaml
@@ -1,35 +1,31 @@
 - name: Lucia Abelenda
-  org: Avina
+  org:  Avina
 - name: Aditya Agrawal
-  org: Global Partnership for Sustainable Development Data
+  org:  Global Partnership for Sustainable Development Data 
 - name: Abhinav Bahl
   org: Open Government Partnership (OGP)
 - name: Jaimie Boyd
   org: Government of Canada
-- name: Agnieszka Rawa
-  org: Millennium Challenge Corporation
 - name: Paulina Bustos
-  org: Civica Digital
+  org: Civica Digital 
 - name: Ania Calderon
   org: Open Data Charter
 - name: Michael Canares
   org: Open Data Lab Jakarta
 - name: Natalia Carfi
-  org: Government of Argentina
-- name: Stephanie Carroll Rainie
-  org: University of Arizona
+  org: Government of Argentina 
 - name: Katie Clancy
-  org: IDRC/OD4D
+  org: IDRC - OD4D
 - name: Tim Davies
   org: Open Data Services
 - name: David Eaves
-  org: Harvard Kennedy School
+  org: Harvard - Kennedy School
 - name: Felipe Estefan
   org: Omidyar
 - name: Silvana Fumega
   org: ILDA
 - name: Joel Gurin
-  org: Centre for Open Data Enterprise (CODE)
+  org: Center for Open Data Enterprise (CODE)
 - name: Gabriela Hadid
   org: Omidyar
 - name: Craig Hammer
@@ -46,17 +42,17 @@
   org: Open North
 - name: Andre Laperriere
   org: Global Open Data for Agriculture and Nutrition (GODAN)
-- name: Salvador Luis Soriano
-  org: Government of Spain
 - name: Emma Martinho-Truswell
   org: Oxford Insights
+- name: Mike Mora
+  org: Organization of American States
 - name: Christina Morales
   org: Government of Spain
-- name: Arturo Muente Kunigami
-  org: Inter American Development Bank
+- name: Arturo Muente-Kunigami
+  org: Inter-American Development Bank
 - name: Georg Neumann
   org: Open Contracting
-- name: Beth Noveck
+- name: Beth Simone Noveck
   org: Govlab
 - name: Muchiri Nyaggah
   org: Africa Open Data Network (AODN)
@@ -65,16 +61,14 @@
 - name: Chimeng Peng
   org: Government of Taiwan
 - name: Fernando Perini
-  org: IDRC
+  org: IDRC - OD4D
+- name: Stephanie Carroll Rainie
+  org: University of Arizona
 - name: Katelyn Rogers
   org: Open Knowledge International (OKI)
-- name: Maurice McNaughton
-  org: Caribbean Open Institute/UWI (COI)
-- name: Mark Cardwell
-  org: USAID
 - name: Mor Rubinstein
   org: Open Heroines / 360Giving
-- name: Ana Sofia  Ruiz Schmidt
+- name: Ana Sofia Ruiz Schmidt
   org: Open Contracting - Hivos
 - name: Lejla Sadiku
   org: United Nations Development Programme (UNDP)
@@ -84,16 +78,16 @@
   org: ILDA
 - name: Fiona Smith
   org: Open Data Institute (ODI)
-- name: Nnenna Nwakanma
-  org: Web Foundation
+- name: Salvador Luis Soriano
+  org: Government of Spain
+- name: Abdoul Malick Tapsoba 
+  org: Government of Burkina Faso
 - name: Philip Thigo
   org: Government of Kenya
 - name: Katherine Townsend
   org: Africa Open Data Conference
 - name: Barbara Ubaldi
   org: OECD
-- name: Shaida Badiee
-  org: Open Data Watch (ODW)
 - name: Stefaan Verhulst
   org: GovLab
 - name: Stephen Walker
@@ -101,10 +95,4 @@
 - name: John Wonderlich
   org: Sunlight Foundation
 - name: Khairil Yusof
-  org: Sinar Project Malaysia
-- name: Sumandro Chattapadhyay
-  org: Center for Internet and Society (CIS)
-- name: Abdoul Malick Tapsoba
-  org: Government of Burkina Faso
-- name: Mike Mora 
-  org: Organization of American States
+  org: Sinar Project Malaysia 
